--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,72 @@
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# PyTorch
+*.pth
+*.pt
+
+# Jupyter
+.ipynb_checkpoints
+
+# Environment
+.env
+.venv
+env/
+venv/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+logs/
+*.log
+
+# Output directories
+outputs/
+visualizations/
+english_visualizations/
+enhanced_visualizations/
+checkpoints/
+runs/
+
+# Temporary files
+tmp_*
+temp_*
+
 data/
 
-.pytest_cache/
-
-__pycache__/
-
-logs/
+*.wav
 
 aim/
 
-/example/midi/
-example/extracted_features/
-
-instrument_timbre_model.egg-info/
+*.npy
+*.midi
+*.mid
 
 saved_models/
-
-output/
-
-!InstrumentTimbre/core/data/
