--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,53 +1,91 @@
 [build-system]
-requires = ["setuptools>=61.0", "wheel"]
+requires = ["setuptools>=45", "wheel", "setuptools_scm"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "instrument-timbre-model"
-version = "0.1.0"
-description = "A toolkit for instrument timbre analysis, manipulation, and conversion."
+name = "InstrumentTimbre"
+dynamic = ["version"]
+description = "AI-powered Chinese traditional instrument recognition system"
+readme = "README.md"
+license = {text = "MIT"}
 authors = [
-    { name="TimWood0x10", email="jinhopers@gmail.com" }
+    {name = "InstrumentTimbre Team"}
 ]
-
-dependencies = [
-    "numpy>=1.24.3",
-    "scipy>=1.11.3",
-    "pandas>=2.1.1",
-    "joblib>=1.3.2",
-    "torch>=2.1.0",
-    "torchaudio>=2.1.0",
-    "tensorboard>=2.14.0",
-    "librosa>=0.10.1",
-    "soundfile>=0.12.1",
-    "pedalboard>=0.7.7",
-    "demucs>=4.0.1",
-    "matplotlib>=3.8.0",
-    "tqdm>=4.66.1",
-    "seaborn>=0.13.0",
-    "scikit-learn>=1.3.1",
-    "onnx>=1.14.1",
-    "onnxruntime>=1.16.1"
+keywords = ["machine-learning", "audio", "chinese-instruments", "ai"]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Science/Research",
+    "Topic :: Scientific/Engineering :: Artificial Intelligence",
+    "Topic :: Multimedia :: Sound/Audio :: Analysis",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
 ]
 requires-python = ">=3.8"
-readme = "README.md"
-license = { file = "LICENSE" }
-
-[project.optional-dependencies]
-develop = [
-    "pytest>=8.3.5",
-    "black>=23.9.1",
-    "flake8>=6.1.0"
+dependencies = [
+    "torch>=1.9.0",
+    "librosa>=0.9.0",
+    "scikit-learn>=1.0.0",
+    "numpy>=1.21.0",
+    "matplotlib>=3.4.0",
+    "click>=8.0.0",
+    "scipy>=1.7.0",
 ]
 
+[project.optional-dependencies]
+dev = [
+    "pytest>=6.0",
+    "flake8>=4.0",
+    "black>=22.0",
+    "isort>=5.0",
+]
+docs = [
+    "sphinx>=4.0",
+    "sphinx-rtd-theme",
+]
+
+[project.scripts]
+instrument-timbre = "InstrumentTimbre.cli.main:cli"
+
+[tool.setuptools_scm]
+write_to = "InstrumentTimbre/_version.py"
+
 [tool.black]
-line-length = 88
+line-length = 120
+target-version = ['py38']
+include = '\.pyi?$'
+exclude = '''
+/(
+    \.eggs
+  | \.git
+  | \.pytest_cache
+  | __pycache__
+  | build
+  | dist
+)/
+'''
+
+[tool.isort]
+profile = "black"
+line_length = 120
+multi_line_output = 3
+include_trailing_comma = true
+force_grid_wrap = 0
+use_parentheses = true
+ensure_newline_before_comments = true
 
 [tool.pytest.ini_options]
-minversion = "6.0"
-addopts = "-ra -q"
 testpaths = ["tests"]
-
-[tool.flake8]
-max-line-length = 88
-exclude = [".git", "__pycache__", "build", "dist", ".venv"]
+python_files = ["test_*.py", "*_test.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
+addopts = [
+    "-v",
+    "--tb=short",
+    "--strict-markers",
+]
+markers = [
+    "slow: marks tests as slow",
+    "integration: marks tests as integration tests",
+]
